fixed autocapitalize issue with username on iphone

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -18,7 +18,3 @@
 	color:green;
 	font-weight:bold;
 }
-.loginname{
-	autocorrect: false;
-	autocapitalize: false;
-}
